--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,11 @@ addons:
       ]
 
 before_install:
+  - true &&
+    export A=a &&
+    export B=b &&
+    export C=c &&
+    echo $A $B $C
   - uname -a
   - cat /etc/lsb-release
   - pwd
