--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ before_install:
   - pwd
   - free -tm
   - df -h
+  - docker --version
   - make --version
   - autoconf --version
   - automake --version
