--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,12 @@ jobs:
   include:
 
     - stage: Stage1
-      env: WORKFLOW=clang
+      env: PIPELINE=clang
+      name: clang-1
       before_install: |
         uname -a && pwd && echo nproc=`nproc` &&
         rm -v -rf ~/cache/* &&
-        touch ~/cache/Stage1-$WORKFLOW && ls -l ~/cache/ &&
+        touch ~/cache/Stage1-$PIPELINE && ls -l ~/cache/ &&
         cd ~ && git clone --branch=master https://github.com/tim-janik/beast.git && cd beast
       script: |
         pwd &&
@@ -27,21 +28,23 @@ jobs:
         cd ~/cache/ && mv -v ~/beast/ .
 
     - stage: Stage2
-      env: WORKFLOW=clang
+      name: clang-2
+      env: PIPELINE=clang
       before_install:
-        - touch ~/cache/Stage2-$WORKFLOW && ls -l ~/cache/
+        - touch ~/cache/Stage2-$PIPELINE && ls -l ~/cache/
         - mv -v ~/cache/beast/ ~ && cd ~/beast/
       script:
         - pwd
         - egrep clang TEST
 
     - stage: Stage1
-      env: WORKFLOW=barzonk
+      env: PIPELINE=barzonk
       install:
-        - touch ~/cache/Deploy-$WORKFLOW && ls -l ~/cache/
+        - touch ~/cache/Deploy-$PIPELINE && ls -l ~/cache/
       script:
         - echo Deploy and upload...
         - ls -l ~/cache/
+      name: barzonk-1
 
 cache:
   directories:
