--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,8 @@ jobs:
         cd ~/cache/ && mv -v ~/beast/ .
 
     - stage: Stage2
-      name: clang-2 with extra info
       env: PIPELINE=clang
+      name: $PIPELINE-2 with extra info
       before_install: |
         mv -v ~/cache/beast/ ~ && cd ~/beast/ &&
         touch ~/cache/"$PIPELINE-$TRAVIS_BUILD_STAGE_NAME" && ls -l ~/cache/ && cd ~/beast/
@@ -39,11 +39,11 @@ jobs:
     - stage: Stage1
       env: PIPELINE=barzonk
       before_install: |
-        touch ~/cache/"$PIPELINE-$TRAVIS_BUILD_STAGE_NAME" && ls -l ~/cache/ && cd ~/beast/
+        touch ~/cache/"$PIPELINE-$TRAVIS_BUILD_STAGE_NAME" && ls -l ~/cache/
       script:
         - echo Deploy and upload...
         - ls -l ~/cache/
-      name: Barzonk-1 # comments after name
+      name: Barzonk-1 $PIPELINE # comments after name
 
 cache:
   directories:
