.travis.yml: always create cache dir
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,10 @@ dist:     xenial
 language: generic
 services: docker
 
-install: |
-  touch "~/cache/stamp-$TRAVIS_BUILD_ID-$TRAVIS_BUILD_NUMBER-git$TRAVIS_COMMIT-$TRAVIS_JOB_ID-$TRAVIS_JOB_NUMBER" && ls -l ~/cache/
+before_install: |
+  mkdir -p ~/cache/ &&
+  touch "~/cache/stamp-$TRAVIS_BUILD_ID-$TRAVIS_BUILD_NUMBER-git$TRAVIS_COMMIT-$TRAVIS_JOB_ID-$TRAVIS_JOB_NUMBER" &&
+  ls -l ~/cache/
 before_cache: |
   (cd ~/cache/ && pwd && ls -l)
 
