--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,9 @@ jobs:
 cache:
   directories:
     - ~/cache/
+env:
+  global:
+    - ISOLATE_CACHE=$TRAVIS_BUILD_NUMBER        # Start clean cache with every new biuld / commit
 
 notifications:
   irc: false
