--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ dist:     xenial
 language: generic
 services: docker
 
-before_install: |
-  echo global before_install
+before_script: |
+  echo global before_script
   test  "$TRAVIS_BRANCH^$TRAVIS_PULL_REQUEST" != "master^false" -o \
         -z "$BINTRAY_API_KEY" || echo "$BINTRAY_API_KEY" > .bintray_api_key
 
