--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -9,12 +9,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@master
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        echo From README.md
-        head README.md
-        cat /etc/os-release
+    - uses: actions/checkout@master
+      with:
+        repository: tim-janik/beast
+    - run: |
+        pwd
+        ls -l ./version.sh
+        ./version.sh
+        misc/cibuild.sh quick all check
