Work around &0 not being a tty

--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -17,4 +17,5 @@ jobs:
         pwd
         cd ../beast
         ./version.sh
+        sed 's/ -ti/ -t/' -i misc/cibuild.sh 
         misc/cibuild.sh quick all check
